=============
	+++++++++++++
	MINOR RELEASE
	+++++++++++++
		-------------
		MICRO RELEASE
		-------------

***********************************************************************
** Visit  https://github.com/wtrdrnkr/pyrecon  for additional detail **
***********************************************************************
		-------------
		Version 1.3.4
		-------------
		*tools.renameFRI
			-in dev
		
		-------------
		Version 1.3.3
		-------------
		*tools.excelTool
			-fixed error with not recognizing correct trace types/children
		*tools.renameFRI
			-still in dev, full of errors :D
		
		-------------
		Version 1.3.2
		-------------
		*tools.classes.Contour
			-self.overlaps()
				-moved threshold variable to parameter, with default 1+2**(-17)
				-added a checker for Contour._shape population
		*tools.classes.rObject
			-created self.getDendNumber(), self.getProtNumber() to get numbers greater than 2 digits
			-added verbose parameter
		*removed wild-card imports, removed unused imports
		*new renameFRI.py (project for FRI students)
		*tools.mergeTool:
			-added sameName parameter to checkOverlappingContours() and separateOverlappingContours(), with default True
		*tools.excelTool:
			-will now make a save directory if does not exist
			-fixed problem with not recognizing dendrites with more than 2 number digits
			
		-------------
		Version 1.3.1
		-------------
		*tools.findCalFactor
			- rmt.getSeries() -> classes.loadSeries()
	
	+++++++++++++
	Version 1.3.0
	+++++++++++++
	*tools.classes:
		- Implemented a new rObject class w/ specific data depending on trace type
	*tools.excelTool:
		- Implemented more robust excelTool
	*tools.reScale:
		- getSeries -> loadSeries
			
		-------------
		Version 1.2.2
		-------------
		*Removed pause in toosl.excelTool.getDendriteDict()
		*Removed some extra verbose code
		*Added some comments
		
		-------------
		Version 1.2.1
		-------------