@@ -663,6 +663,18 @@ class Section:
         '''Returns attributes in xml output format'''
         return str(self.index), str(self.thickness), str(self.alignLocked).lower()
 # Mutators
+    def renameObject(self, oldName, newName):
+        '''Renames all occurances of oldName in section to newName'''
+        for contour in self.contours:
+            if contour.name == oldName:
+                contour.name = newName
+    def getObject(self, regex):
+        '''Returns a list of objects, in this section, that match the regex'''
+        objects = []
+        for contour in self.contours:
+            if regex.match(contour.name) != None:
+                objects.append(contour)
+        return objects
     def s2b(self, string):
         '''Converts string to bool'''
         if string == 'None':
@@ -838,6 +850,16 @@ class Series:
         return (self.output()[0] != other.output()[0] and
                 self.output()[1] != other.output()[1])
 # Accessors
+    def renameObject(self, oldName, newName):
+        '''Renames all occurances of oldName in a series to newName.'''
+        for section in self.sections:
+            section.renameObject(oldName, newName)
+    def getObject(self, regex):
+        '''Returns a list of 1 list per section containing all the contour that match the regex'''
+        objects = []
+        for section in self.sections:
+            section.append(section.getObject(regex))
+        return objects  
     def getData(self, object_name, data_string):
         string = str(data_string).lower()
         if string == 'volume':
@@ -854,7 +876,7 @@ class Series:
             return self.getStartEndCount(object_name)[1]
         elif string == 'count':    
             return self.getStartEndCount(object_name)[2]
-    def getObjectLists(self): #=== added ',' to {2}
+    def getObjectLists(self):
         '''Returns sorted lists of dendrite names, protrusion names, trace names, and a list of other objects in series'''
         dendrite_expression = 'd[0-9]{2,}' # represents base dendrite name (d##)
         protrusion_expression = 'd[0-9]{2,}p[0-9]{2,}$' # represents base protrusion name (d##p##)
